# Arecanut_detection_and_Ripening_time_Estimation

./: .breakpoints  .replit  README.md  app.py  det_model.pth  pyproject.toml  replit.nix  test.py
templates/: detection_page.html  estimation_page.html  start_page.html
