[tool.poetry]
name = "repl_nix_ArecanutdetectionandRipeningtimeEstimation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
torchvision = "^0.17.2"
requests = "^2.31.0"
torch = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
